--- a/ui/src/css/App.css
+++ b/ui/src/css/App.css
@@ -5,8 +5,8 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: var(--color-neutral-20);
-  color: var(--color-neutral-90);
+  background-color: var(--color-neutral-20) !important;
+  color: var(--color-neutral-90) !important;
   font-size: 16px;
   font-family: 'Oswald', sans-serif !important;
   /* font-weight: var(--fw-regular); */
@@ -142,7 +142,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 2;
-  background-color: white;
+  background-color: var(--color-neutral-20) !important;
 }
 
 .p-chip.custom-chip {
